[project]
name = "YanXiBot"
version = "0.1.0"
description = "YanXiBot"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "nonebot-plugin-apscheduler>=0.3.0",
    "nonebot-adapter-onebot>=2.2.4",
    "nonebot2[fastapi]>=2.0.1",
    "imgkit>=1.2.3",
    "httpx>=0.24.1",
    "tenacity>=8.2.3",
    "requests>=2.31.0",
    "qrcode>=7.4.2",
    "pillow>=10.0.0",
]

[tool.nonebot]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11", project_link = "nonebot-adapter-onebot", desc = "OneBot V11 协议"}]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_animeres"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

